--- a/hello-world/manifests/ingress.yaml
+++ b/hello-world/manifests/ingress.yaml
@@ -1,12 +1,15 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: minimal-ingress
+  name: hello-world-ing
 spec:
   rules:
-  - http:
-      host: fleet-managed-downstream.local
+  - host: fleet-managed-downstream.local
+    http:
       paths:
-      - backend:
-          serviceName: hello-world-svc
-          servicePort: 80
+      - pathType: Prefix 
+        path: "/"
+        backend:
+          service:
+            name: hello-world-svc
+            port: 80
