--- a/hello-world/manifests/ingress.yaml
+++ b/hello-world/manifests/ingress.yaml
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: hello-world-ing
@@ -10,5 +10,7 @@ spec:
       - pathType: Prefix 
         path: "/"
         backend:
-          serviceName: hello-world-svc
-          servicePort: 80
+          service:
+            name: hello-world-svc
+            port:
+              number: 80
