--- a/hello-world/manifests/ingress.yaml
+++ b/hello-world/manifests/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: hello-world-ing
-  namespace: cattle-resources-system
+  namespace: hello-world
 spec:
   rules:
   - host: "fleet-managed-downstream.local"
