--- a/hello-world/manifests/ingress.yaml
+++ b/hello-world/manifests/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: hello-world
 spec:
   rules:
-  - host: bill-gas-demo.eng.rancher.space
+  - host: bill-helloworld.eng.rancher.space
     http:
       paths:
       - backend:
