--- a/hello-world/fleet.yaml
+++ b/hello-world/fleet.yaml
@@ -1,1 +1,16 @@
 defaultNamespace: hello-world
+
+targetCustomizations:
+- name: ingress
+  yaml:
+    overlays:
+    - ./overlays/ingress
+  clusterSelector:
+    ingress: "true"
+- name: lb
+  yaml:
+    overlays:
+    - ./overlays/service-lb
+  clusterSelector:
+    ingress: "false"
+
